# pandora_control

pandora_cmd_vel_mux/: CMakeLists.txt  package.xml
pandora_cmd_vel_mux/config/: cmd_vel_mux_config.yaml
pandora_cmd_vel_mux/launch/: cmd_vel_mux.launch
pandora_control/: package.xml
pandora_control_communications/: CMakeLists.txt  package.xml
pandora_end_effector_controller/: CMakeLists.txt  package.xml  setup.py
pandora_end_effector_controller/launch/: end_effector_controller.launch
pandora_end_effector_controller/scripts/pandora_end_effector_controller/: move_eef_script.py
pandora_end_effector_controller/src/: states.py
pandora_end_effector_controller/src/pandora_end_effector_controller/: client_factory.py  client_list.py  command_mapping_dict.py  effector_clients.py  move_end_effector_server.py
pandora_end_effector_controller/src/pandora_end_effector_controller/mocks/: action_servers.py
pandora_end_effector_planner/: CMakeLists.txt
pandora_end_effector_planner/action/: MoveLinear.action  MoveSensor.action
pandora_end_effector_planner/config/: sensor_orientation_planner.yaml
pandora_end_effector_planner/end_effector_planner/src/: end_effector_planner_smach.py
pandora_end_effector_planner/include/pandora_end_effector_planner/: sensor_orientation_planner.h
pandora_end_effector_planner/launch/: sensor_orientation_planner.launch
pandora_end_effector_planner/linear_movement_planner/config/: linear_movement_planner.yaml
pandora_end_effector_planner/linear_movement_planner/include/linear_movement_planner/: linear_movement_planner.h
pandora_end_effector_planner/linear_movement_planner/src/: linear_movement_planner.cpp
pandora_end_effector_planner/pandora_sensor_orientation_planner/include/pandora_sensor_orientation_planner/: sensor_orientation_planner.h
pandora_end_effector_planner/pandora_sensor_orientation_planner/src/: sensor_orientation_planner.cpp
pandora_end_effector_planner/scripts/: move_head_script.py  move_kinect_script.py
pandora_end_effector_planner/sensor_orientation_planner/config/: sensor_orientation_planner.yaml
pandora_end_effector_planner/sensor_orientation_planner/include/sensor_orientation_planner/: sensor_orientation_planner.h
pandora_end_effector_planner/sensor_orientation_planner/scripts/: move_head_script.py
pandora_end_effector_planner/sensor_orientation_planner/src/: sensor_orientation_planner.cpp
pandora_end_effector_planner/src/: sensor_orientation_planner.cpp
pandora_kinect_control/: CMakeLists.txt  package.xml
pandora_kinect_control/include/pandora_kinect_control/: kinect_control.h  pandora_kinect_control.h
pandora_kinect_control/launch/: pandora_kinect_control.launch
pandora_kinect_control/scripts/: move_kinect_script.py
pandora_kinect_control/src/: kinect_control.cpp  kinect_control_node.cpp  pandora_kinect_control.cpp  pandora_kinect_control_node.cpp
pandora_laser_control/include/pandora_stabilizer_control/: pandora_stabilizer_control.h
pandora_laser_control/src/: pandora_stabilizer_control.cpp  pandora_stabilizer_control_node.cpp
pandora_linear_actuator_controller/config/: linear_actuator_controller.yaml
pandora_linear_actuator_controller/src/: linear_actuator_controller.cpp
pandora_linear_movement_controller/: CMakeLists.txt
pandora_linear_movement_controller/include/pandora_linear_movement_controller/: linear_movement_controller.h
pandora_linear_movement_controller/launch/: linear_movement_controller.launch
pandora_linear_movement_controller/src/: linear_movement_controller.cpp
pandora_motion_control/: CMakeLists.txt  package.xml  rl_tips  setup.py
pandora_motion_control/launch/: config.rviz  simulation_test.launch  standalone_rl.launch
pandora_motion_control/scripts/: joystick_teleop.py
pandora_motion_control/src/pandora_kinodynamic_control/: AV_table  curve_comparison.py  dataset_utils.py  experiment.py  kinodynamic_control.py  motion_reward.py  navigation_environment.py  navigation_task.py  params.py  pybrain_test.py  topics.py  utils.py
pandora_motion_control/src/pandora_kinodynamic_control/cost_functions/: goal_cost.py  linear_fusion.py  trajectory_cost.py
pandora_motion_control/src/pandora_kinodynamic_control/cost_functions/cost_graph/: cost_node.py  fuse_cost_node.py  fusion_strategy.py
pandora_motion_control/src/pandora_kinodynamic_control/tables/: AV_table_S2401_A8  AV_table_S2500_A10  AV_table_S625_A10  AV_table_S81_A3
pandora_motion_control/src/pandora_teleop/: pandora_teleop_key.cpp
pandora_motor_control/: CMakeLists.txt
pandora_motor_control/src/: pandora_teleop_key.cpp
pandora_sensor_orientation_controller/: CMakeLists.txt
pandora_sensor_orientation_controller/config/: sensor_orientation_controller.yaml
pandora_sensor_orientation_controller/include/pandora_sensor_orientation_controller/: sensor_orientation_controller.h
pandora_sensor_orientation_controller/launch/: sensor_orientation_controller.launch
pandora_sensor_orientation_controller/scripts/pandora_sensor_orientation_controller/: move_head_script.py
pandora_sensor_orientation_controller/src/: sensor_orientation_controller.cpp
pandora_stabilizer/: CMakeLists.txt  CMakeLists.txt~  package.xml
pandora_stabilizer/config/: stabilizer_control.yaml
pandora_stabilizer/include/pandora_stabilizer_control/: stabilizer_control.h
pandora_stabilizer/launch/: stabilizer_test.launch
pandora_stabilizer/src/: stabilizer_control.cpp
pandora_stabilizer/test/functional/: test_pandora_stabilizer_node.py
pandora_teleop/: CMakeLists.txt
pandora_teleop/include/pandora_teleop/: motors_keyop.h
pandora_teleop/scripts/: joyop.py  keyop.py  motors_joyop.py
pandora_teleop/src/: motors_keyop.cpp  teleop_key.cpp
pandora_teleoperation/: CMakeLists.txt  package.xml
pandora_teleoperation/scripts/: keyop.py  test_keyop.py
