<?xml version="1.0"?>
<package>
  <name>pandora_control_communications</name>
  <version>0.0.0</version>
  <description>pandora_control_communications</description>
  <maintainer email="apostoee@gmail.com">Evangelos Apostolidis</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_control/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_control</url>
  
  <author>Evangelos Apostolidis</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>message_generation</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roslint</run_depend>

  <export>
  </export>  
</package>
